# stele

./: Cargo.toml  Info.plist  README.md  build.sh
.github/workflows/: release.yml
assets/: icon.icns
src/: main.rs  models.rs  monitor.rs  panel.rs  view.rs
