[package]
name = "stele"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = "0.4.42"
global-hotkey = "0.7"
gpui = { version = "*" }
objc2 = "0.6.3"
objc2-app-kit = { version = "=0.3.1", features = [
    "NSPasteboard",
    "NSApplication",
    "NSRunningApplication",
] }
objc2-foundation = { version = "=0.3.1" }
dispatch2 = { version = "0.3", default-features = false, features = ["alloc", "objc2"] }
url = "2.5.7"
tray-icon = "0.21.2"
image = "0.25.9"
